Auto convert ct:pal into cthr:pal

--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,6 @@
-{deps, []}.
+{ct_opts, [
+    {ct_hooks, [cth_readable_failonly, cth_readable_shell]}
+]}.
+{ct_compile_opts, [
+    {parse_transform, cth_readable_transform}
+]}.
