--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,9 @@
+{deps, [cf]}.
+
 {ct_opts, [
     {ct_hooks, [cth_readable_failonly, cth_readable_shell]}
 ]}.
+
 {ct_compile_opts, [
     {parse_transform, cth_readable_transform}
 ]}.
