--- a/rebar.config
+++ b/rebar.config
@@ -7,3 +7,5 @@
 {ct_compile_opts, [
     {parse_transform, cth_readable_transform}
 ]}.
+
+{erl_opts, [{platform_define, "^(R|1|20)", no_logger_hrl}]}.
