--- a/rebar.config
+++ b/rebar.config
@@ -7,5 +7,14 @@
 {ct_compile_opts, [
     {parse_transform, cth_readable_transform}
 ]}.
+{eunit_compile_opts, [ % to avoid 'do eunit, ct' eating up the parse transform
+    {parse_transform, cth_readable_transform}
+]}.
 
 {erl_opts, [{platform_define, "^(R|1|20)", no_logger_hrl}]}.
+
+{profiles, [
+    {test, [
+        {deps, [{lager, "3.6.10"}]}
+    ]}
+]}.
